mongo url updated

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,6 +1,6 @@
 PORT=4000
 
-MONGO_URL= "mongodb://localhost:27017"
+MONGO_URL= "mongodb+srv://vish9829216:Li7v37pjg8yyVwBc@cluster0.j2gzcfm.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 
 FRONTEND_URL=http://localhost:5173
 
