frontend url added

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -2,7 +2,7 @@ PORT=4000
 
 MONGO_URL= "mongodb+srv://vish9829216:Li7v37pjg8yyVwBc@cluster0.j2gzcfm.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=https://hospital-backend-1-pwmf.onrender.com
 
 DASHBOARD_URL=http://localhost:5174
 
